tests/Rules/Structure/Fixtures/invalid/heading_empty.html.twig
{# 1 errors #}
<h1></h1>
